[package]
name = "vedit"
version = "0.1.2"
edition = "2024"
description = "A tool that wraps auto-editor and ffmpeg for fast editing."
authors = ["alexandretrotel"]
documentation = "https://docs.rs/vedit"
homepage = "https://github.com/alexandretrotel/vedit"
repository = "https://github.com/alexandretrotel/vedit"
license = "GPL-3.0-or-later"

[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
